<resources>

    <!--Home Layout-->
    <string name="app_name">Dog Age To Human Age Converter</string>
    <string name="app_info_a_activity_main">The Dog Age to Human Age Calculator will calculate the
    human age of your dog based on their weight and age.\n\n Press Calculate to continue.\n Select
    puppy size based on kgs.\n Choose age in year(s) and month(s).</string>


    <string name="button_submit">Calculate</string>

    <!--Calculator Layout-->
    <string name="header_age_converter">Age Converter</string>
    <string name="button_home">Home</string>
    <string name="text_weight_range">Select Dog Weight</string>
    <string name="text_year_range">Select Dog Age - Year(s)</string>
    <string name="text_month_range">Select Dog Age - Month(s)</string>
    <string name="button_calculate">Calculate\nHuman Years</string>
    <string name="result"><font size="20">Human Age</font></string>
    <string name="weight_result">Weight</string>
    <string name="small">Small dog (under 9.9 kg)</string>
    <string name="no_age">No weight entered</string>
    <string name="medium">Medium dog (10 kg to 24.9 kg)</string>
    <string name="large">Large dog (25 kg to 39.9 kg)</string>
    <string name="txt_year">Year(s)</string>
    <string name="blank" />
    <string name="one_year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="xlarge">X-Large dog (over 40 kg)</string>
    <string name="title_activity_c_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources><!-- <string name="activity_main_action_bar">Dog Age To Human Age Converter</string>


    <string name="dogNameInput">Puppy"'"s Name</string>
    <string name="activity_main_submit">Submit</string>

    <string name="provide_year">Years</string>
    <string name="provide_month">Month</string>
    <string name="year">Year</string>


                          Small dog (under 9.07 kg)
                      Medium dog (between 9.07 kg to 22.7 kg)
                      Large dog (over 22.7 kg)-->

