<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/puppy_with_colour"
    android:orientation="vertical"
    tools:context=".a_MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/activity_unit_converter_action_bar"
            android:layout_width="422dp"
            android:layout_height="76dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/button_home"
            android:textAlignment="center"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/activity_main_instructions"
            android:layout_width="392dp"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/img_bowing_dog"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/app_info_a_activity_main"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/button_calculate"
            android:layout_width="124dp"
            android:layout_height="40dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:fontFamily="@font/berkshire_swash"

            android:text="@string/button_submit"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>

    <!--android:onClick="sendCalculator"-->