<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="410dp"
    android:layout_height="match_parent"
    android:background="@drawable/puppy_with_colour"
    android:orientation="vertical"
    tools:context=".a_MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/activity_unit_converter_action_bar"
            android:layout_width="422dp"
            android:layout_height="76dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/header_age_converter"
            android:textAlignment="center"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_weight"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/text_weight_range"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/value_weight"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:fontFamily="@font/berkshire_swash"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/size_type"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:fontFamily="@font/berkshire_swash"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/seekbar_weight"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:max="4" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_year"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/text_year_range"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/value_year"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:fontFamily="@font/berkshire_swash"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/display_year"
            android:layout_width="68dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:fontFamily="@font/berkshire_swash"

            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <SeekBar
            android:id="@+id/seekbar_year"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:max="18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_month"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/text_month_range"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/value_month"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:fontFamily="@font/berkshire_swash"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/display_month"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:fontFamily="@font/berkshire_swash"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <SeekBar
            android:id="@+id/seekbar_month"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:max="11" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/yellow"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/button_calculate"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/human_age"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:fontFamily="@font/berkshire_swash"
            android:hint="@string/result"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/button_home"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_gravity=""
            android:layout_marginLeft="130dp"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:fontFamily="@font/berkshire_swash"

            android:text="@string/button_home"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>

